test/error/E11.chigfn
{
	"type": "function",
	"name": "helloworld",
	"nodes": [
		{
			"type": "lang:if",
			"data": {},
			"location": []
		}
	]
}
